Add overwrite projection
